--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Upload 3 star messages to specific channel",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^12.1.1",
-    "node-fetch": "^2.6.0"
+    "discord.js": "^12.1.1"
   },
   "devDependencies": {},
   "scripts": {
